[project]
name = "booking"
version = "0.1.0"
description = "Async booking service"
authors = [{ name = "Vladislav", email = "vladislav.dr2@mail.ru" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.137.1",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "uuid7>=0.1.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "black>=25.1.0,<26",
    "isort>=6.0.1,<7",
    "mypy>=1.16.1,<2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 90
target-version = ['py313']
skip-magic-trailing-comma = true
extend-exclude = '''
(
  test
)
'''

[tool.isort]
profile = "black"
line_length = 90
lines_after_imports = 2
multi_line_output = 0
force_to_top = ["__future__"]
force_sort_within_sections = true
skip_gitignore = true
src_paths = ["src"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.13"
mypy_path = ["src"]
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "--cov=src --cov-report=term-missing"
pythonpath = ". src"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 60
